<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.er453r</groupId>
    <artifactId>mini-template</artifactId>
    <version>0.1</version>
    <packaging>jar</packaging>

    <name>mini-template</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.4.RELEASE</version>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <main.class>com.er453r.MiniMain</main.class>
        <java.version>11</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
    </dependencies>

    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>http://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <sourceDirectory>src</sourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>jre-cleanup</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>
                                rm
                            </executable>

                            <arguments>
                                <argument>-rf</argument>
                                <argument>
                                    ${project.build.directory}/runtime
                                </argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>jre-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jlink</executable>

                            <longModulepath>false</longModulepath>

                            <arguments>
                                <argument>--module-path</argument>
                                <argument>
                                    ${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar
                                </argument>
                                <argument>--add-modules</argument>
                                <argument>mini</argument>
                                <argument>--launcher</argument>
                                <argument>start=mini/com.er453r.MiniMain</argument>
                                <argument>--output</argument>
                                <argument>${project.build.directory}/runtime</argument>
                                <argument>--no-header-files</argument>
                                <argument>--no-man-pages</argument>
                                <argument>--compress=2</argument>
                                <argument>--strip-debug</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>jre-strip</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>bash</executable>

                            <arguments>
                                <argument>-c</argument>
                                <argument>find target/runtime/ -name '*.so' -exec strip -p --strip-unneeded {} \;</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
